ecommerce-kafka/buytrip-v2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buytrip-pod-v2
  labels:
    app: buytrip-pod
    version: v2
spec:
  selector:
    matchLabels:
      app: buytrip-pod
      version: v2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: buytrip-pod
        version: v2
    spec:
      containers:
      - image: douglasnogueiram/ms-communication-buytrip:3.0.0.-SNAPSHOT
        name: buytrip-pod
        command:
          - "java"
          - "-Delastic.apm.active=$(ELASTIC_APM_ACTIVE)"
          - "-Delastic.apm.server_urls=$(ELASTIC_APM_SERVER_URLS)"
          - "-Delastic.apm.service_name=$(ELASTIC_APM_SERVICE_NAME)"
          - "-Delastic.apm.secret_token=$(ELASTIC_APM_SECRET_TOKEN)"
          - "-Delastic.apm.enabled=$(ELASTIC_APM_ENABLED)"
          - "-Delastic.apm.capture_body=$(ELASTIC_APM_CAPTURE_BODY)"
          - "-Delastic.apm.capture_body_content_types=$(ELASTIC_APM_CAPTURE_BODY_CONTENT_TYPES)"
          - "-Delastic.apm.capture_headers=$(ELASTIC_APM_CAPTURE_HEADERS)"
          - "-jar"
          - "ms-communication-buytrip.jar"  
        ports:
        - containerPort: 8086
          name: http
