ecommerce-kafka/bank.yml
apiVersion: v1
kind: Service
metadata:
  name: service-bank
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8090
  selector:
    app: bank-pod

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-pod
  labels:
    app: bank-pod
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-pod
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bank-pod
        version: v1
    spec:
      containers:
      - image: douglasnogueiram/ms-communication-bank:3.0.0.-SNAPSHOT
        name: bank-pod
        command:
          - "java"
          - "-Delastic.apm.active=$(ELASTIC_APM_ACTIVE)"
          - "-Delastic.apm.server_urls=$(ELASTIC_APM_SERVER_URLS)"
          - "-Delastic.apm.service_name=$(ELASTIC_APM_SERVICE_NAME)"
          - "-Delastic.apm.secret_token=$(ELASTIC_APM_SECRET_TOKEN)"
          - "-Delastic.apm.enabled=$(ELASTIC_APM_ENABLED)"
          - "-Delastic.apm.capture_body=$(ELASTIC_APM_CAPTURE_BODY)"
          - "-Delastic.apm.capture_body_content_types=$(ELASTIC_APM_CAPTURE_BODY_CONTENT_TYPES)"
          - "-Delastic.apm.capture_headers=$(ELASTIC_APM_CAPTURE_HEADERS)"
          - "-jar"
          - "ms-communication-bank.jar"        
        ports:
        - containerPort: 8090
          name: http
