ecommerce-kafka/buyfeedback.yml
apiVersion: v1
kind: Service
metadata:
  name: service-buyfeedback
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8082
  selector:
    app: buyfeedback-pod

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyfeedback-pod
  labels:
    app: buyfeedback-pod
spec:
  selector:
    matchLabels:
      app: buyfeedback-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: buyfeedback-pod
    spec:
      containers:
      - image: douglasnogueiram/ms-communication-buyfeedback:3.0.0.-SNAPSHOT
        name: buyfeedback-pod
        command:
          - "java"
          - "-Delastic.apm.active=$(ELASTIC_APM_ACTIVE)"
          - "-Delastic.apm.server_urls=$(ELASTIC_APM_SERVER_URLS)"
          - "-Delastic.apm.service_name=$(ELASTIC_APM_SERVICE_NAME)"
          - "-Delastic.apm.secret_token=$(ELASTIC_APM_SECRET_TOKEN)"
          - "-Delastic.apm.enabled=$(ELASTIC_APM_ENABLED)"
          - "-Delastic.apm.capture_body=$(ELASTIC_APM_CAPTURE_BODY)"
          - "-Delastic.apm.capture_body_content_types=$(ELASTIC_APM_CAPTURE_BODY_CONTENT_TYPES)"
          - "-Delastic.apm.capture_headers=$(ELASTIC_APM_CAPTURE_HEADERS)"
          - "-jar"
          - "ms-communication-buyfeedback.jar"  
        ports:
        - containerPort: 8082
          name: http
