ecommerce-kafka/buyprocess.yml
apiVersion: v1
kind: Service
metadata:
  name: service-buyprocess
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8081
  selector:
    app: buyprocess-pod

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyprocess-pod
  labels:
    app: buyprocess-pod
    version: v1
spec:
  selector:
    matchLabels:
      app: buyprocess-pod
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: buyprocess-pod
        version: v1
    spec:
      containers:
      - image: douglasnogueiram/ms-communication-buyprocess:3.0.0.-SNAPSHOT
        name: buyprocess-pod
        command:
          - "java"
          - "-Delastic.apm.active=$(ELASTIC_APM_ACTIVE)"
          - "-Delastic.apm.server_urls=$(ELASTIC_APM_SERVER_URLS)"
          - "-Delastic.apm.service_name=$(ELASTIC_APM_SERVICE_NAME)"
          - "-Delastic.apm.secret_token=$(ELASTIC_APM_SECRET_TOKEN)"
          - "-Delastic.apm.enabled=$(ELASTIC_APM_ENABLED)"
          - "-Delastic.apm.capture_body=$(ELASTIC_APM_CAPTURE_BODY)"
          - "-Delastic.apm.capture_body_content_types=$(ELASTIC_APM_CAPTURE_BODY_CONTENT_TYPES)"
          - "-Delastic.apm.capture_headers=$(ELASTIC_APM_CAPTURE_HEADERS)"
          - "-jar"
          - "ms-communication-buyprocess.jar"  
        ports:
        - containerPort: 8081
          name: http
