ecommerce-kafka/destinationrule-bank.yml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: bank
  spec:
    host: bank-pod
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
