ecommerce-kafka/destinationrule-buytrip.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: buytrip
spec:
  host: service-buytrip
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
