ecommerce-kafka/virtualservices-bank.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-bank
spec:
  hosts:
  - "*"
  gateways:
  - payment-gateway
  http:
  - match:
    - uri:
        exact: "/pagamento"
    route:
      - destination:
          host: service-bank
          subset: v1
        weight: 80    
      - destination:
          host: service-bank
          subset: v2 
        weight: 20
