ecommerce-kafka/virtualservices-buyfeedback.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-buyfeedback
spec:
  hosts:
  - "*"
  gateways:
  - payment-gateway
  http:
  - match:
    - method:
        exact: GET
    route:
    - destination:
        host: service-buyfeedback
        port:
          number: 8082
