ecommerce-kafka/virtualservices-buyprocess.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: buyprocess
spec:
  hosts:
  - buyprocess-pod
  http:
  - route:
    - destination:
        host: buyprocess-pod
        subset: v1
      weight: 75
    - destination:
        host: buyprocess-pod
        subset: v2
      weight: 25
